# Vantage

./: .gitignore  ISSUES.md  README.md  pyproject.toml  requirements.txt  run.py  setup-ubuntu.sh  setup.sh
.github/workflows/: ci.yml
ctfauto/: __init__.py  cli.py  config.py  util.py  wordlists.py
ctfauto/modules/: cloud.py  enumerate.py  exploit.py  postexploit.py  recon.py  report.py
tests/: test_ctfauto.py  test_enrich.py  test_vantage.py
vantage/: __init__.py  cli.py  config.py  util.py  wordlists.py
vantage/modules/: advise.py  cloud.py  enumerate.py  exploit.py  handoff.py  recon.py  report.py  search.py
webui/: README.md  app.py  requirements.txt
webui/templates/: _macros.html  base.html  index.html  live.html  ongoing.html  previous.html  report.html  reports.html  scan.html  sweep.html  sweeps.html
