[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ctfauto"
version = "0.1.0"
description = "Automated recon & enumeration with a report for owned & authorized targets (HTB, Metasploitable, lab VMs). Identifies candidate exploits but never runs them."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "foldedarrow" }]
keywords = ["pentest", "ctf", "hackthebox", "automation", "security"]

# Core ctfauto is stdlib-only. The external recon/enum CLI tools (nmap, gobuster,
# nikto, searchsploit, ...) are system packages, not pip deps — see setup.sh /
# `ctfauto --check`.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
ctfauto = "ctfauto.cli:main"

[tool.setuptools]
packages = ["ctfauto", "ctfauto.modules"]
